<resources>
    <string name="app_name">MyWhatsapp</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="last_message">Last message</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="you">You</string>
    <string name="me">Me</string>
    <string name="receiver">Receiver</string>
    <string name="time">12:12 pm</string>
    <string name="sender">Sender</string>
    <string name="type_a_message">Type a message...</string>
    <string name="status">Status</string>
    <string name="receiver_id">ReceiverId</string>
</resources>